log
Tue Mar 23 16:55:26 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:35:6: error: expected expression before ‘return’
      return NULL;
      ^~~~~~
list.c:32:14: error: variable ‘L’ set but not used [-Werror=unused-but-set-variable]
       List * L = (List *)malloc(sizeof(List));
              ^
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 23 16:55:32 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:14: error: unused variable ‘L’ [-Werror=unused-variable]
       List * L = (List *)malloc(sizeof(List));
              ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 23 16:58:12 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c3e2401
Tue Mar 23 16:59:22 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
ea2c5fd
Tue Mar 23 17:16:51 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
088652c
Tue Mar 23 17:17:01 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1b5b7aa
Tue Mar 23 20:35:39 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1416874
Tue Mar 23 20:41:43 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dc29347
Tue Mar 23 20:42:13 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1eb3a1b
